<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <android.support.design.widget.TextInputLayout
            android:theme="@style/TextLabel"
            style="@style/signin_signup_input_layout"
            >
            <EditText
                android:id="@+id/input_phone"
                style="@style/sign_in_up_entry_text"
                android:drawableLeft="@drawable/email_icon"
                android:inputType="textEmailAddress"
                android:hint="@string/reg_entry_email"

                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:theme="@style/TextLabel"
            style="@style/signin_signup_input_layout"
            >
            <EditText
                android:id="@+id/input_first_name"
                style="@style/sign_in_up_entry_text"
                android:inputType="text"
                android:drawableLeft="@drawable/name_icon"
                android:hint="@string/reg_hint_first_name"

                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:theme="@style/TextLabel"
            style="@style/signin_signup_input_layout"
            >
            <EditText
                android:id="@+id/input_password"
                style="@style/sign_in_up_entry_text"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/password_icon"
                android:hint="@string/reg_hint_password"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:theme="@style/TextLabel"
            style="@style/signin_signup_input_layout"
            >
            <EditText
                android:id="@+id/input_comfirm_password"
                style="@style/sign_in_up_entry_text"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/password_icon"
                android:hint="@string/reg_hint_confirm_pass"
                />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_create"
            android:text="@string/btn_register"
            style="@style/general_button"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            />
    </LinearLayout>

</RelativeLayout>