<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="20dp"
    android:paddingLeft="20dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/img_check"
        android:orientation="vertical"
        android:paddingBottom="128dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/congratulation"
            android:textColor="#fff"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/password_reset_success"
            android:textColor="#fff"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/last_transactionicon"
        android:layout_centerInParent="true"
        android:id="@+id/img_check"
        />
    <Button
        style="@style/button_white"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login_new_pass"
        android:layout_below="@id/img_check"
        android:id="@+id/continue_log_in"
        />
</RelativeLayout>