<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ohgo.vptech.smarttraffic.main.forgotpass.SendCodeActivity"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_action_bar"
            android:id="@+id/toolbar_send_code"
            android:layout_alignParentTop="true"
            android:theme="@style/themeToolBar"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Password Reset"
                android:textSize="18sp"
                android:textColor="#fff"
                android:layout_gravity="center_horizontal"
                />
        </android.support.v7.widget.Toolbar>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_below="@id/toolbar_send_code"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:id="@+id/param_form"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/page_1"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/des_enter_email_code"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textColor="@color/name_user_comment"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    />
                <EditText
                    style="@style/sign_in_up_entry_text"
                    android:inputType="textEmailAddress"
                    android:id="@+id/send_code_email_forgot"
                    android:hint="@string/reg_entry_email"
                    android:drawableLeft="@drawable/email_icon"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    />

                <EditText
                    style="@style/sign_in_up_entry_text"
                    android:id="@+id/send_code_code_forgot"
                    android:inputType="text"
                    android:hint="Code"
                    android:drawableLeft="@drawable/password_icon"
                    android:layout_marginBottom="16dp"
                    />

                <EditText
                    style="@style/sign_in_up_entry_text"
                    android:inputType="textPassword"
                    android:id="@+id/send_code_new_pass"
                    android:hint="@string/reg_hint_password"
                    android:drawableLeft="@drawable/password_icon"
                    android:layout_marginBottom="16dp"
                    />

                <EditText
                    style="@style/sign_in_up_entry_text"
                    android:id="@+id/send_code_new_confirm_pass"
                    android:inputType="textPassword"
                    android:hint="@string/reg_hint_confirm_pass"
                    android:drawableLeft="@drawable/password_icon"
                    />

            </LinearLayout>

            <Button
                style="@style/general_button"
                android:id="@+id/btn_send_code"
                android:layout_below="@+id/param_form"
                android:text="Continue"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
