<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#fff"
    tools:context="ohgo.vptech.smarttraffic.main.reporter.ReportPoliceActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/wrap_toolbar"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_report_title"
                android:textSize="21sp"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wrap_toolbar"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/wrap_image"
            >
            <ImageView
                android:id="@+id/img_capture"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/image_report_detail"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/wrap_image"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/ln_location"
                android:visibility="gone"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/report_location_name"
                    android:textSize="20sp"
                    android:textColor="@color/name_user_comment"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/report_location_adress"
                    android:textColor="@color/content_comment"
                    android:textSize="15sp"
                    />
                >

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/choose_state"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#24000000"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ln_comment"
                android:visibility="gone"
                >
                <include layout="@layout/report_comment"/>
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>

    <com.github.clans.fab.FloatingActionMenu
        xmlns:fab="http://schemas.android.com/apk/res-auto"
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        fab:menu_labels_colorNormal="@color/white"
        fab:menu_backgroundColor="#40323a45"
        fab:menu_labels_textColor="@color/main_color"
        fab:menu_colorNormal="@color/main_color"
        >
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/img_report_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/location"
            fab:fab_size="mini"
            fab:backgroundTint="@color/white"
            fab:fab_label="@string/report_select_location"
            fab:fab_colorNormal="@color/main_color"
            />
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/img_report_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/comment"
            fab:fab_size="mini"
            fab:fab_label="@string/report_write_content"
            fab:fab_colorNormal="@color/main_color"
            />
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/img_report_capture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/camera"
            fab:fab_size="mini"
            fab:fab_label="@string/report_take_photo"
            fab:fab_colorNormal="@color/main_color"
            />
    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout >
